fixes alert message overlap, fixes footer overlap on about page, centers img

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -140,6 +140,7 @@ h3 {
   filter: sepia(75%) grayscale(50%);
   -webkit-filter: sepia(75%) grayscale(50%);
   border-radius: 3px;
+  margin: 0 auto;
 }
 
 .modal {
